--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.2",
+    "mysql2": "3.6.2"
   },
   "devDependencies": {
     "standard": "17.1.0"
