--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-URL=localhost
+URL='localhost'
 PORT=3001
 
 JWT_PRIVATE_KEY='12345678'
+
+DB_HOST='localhost'
+DB_USER='username'
+DB_PORT=3306
+DB_PASSWORD='userpassword'
+DB_NAME='databasename'
