--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.2",
-    "mysql2": "3.6.2"
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "7.6.2",
+    "mysql2": "3.6.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "standard": "17.1.0"
